--- a/gms.web/Views/Shared/_Layout.cshtml
+++ b/gms.web/Views/Shared/_Layout.cshtml
@@ -96,6 +96,11 @@
         }
     </script>
     <!--end::Theme mode setup on page load-->
+
+    <!--begin::-->
+    <input id="user_email" type="hidden" value="@user.Email" />
+    <!--end::-->
+
     <!--begin::App-->
     <div class="d-flex flex-column flex-root app-root" id="kt_app_root">
         <!--begin::Page-->
