--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -109,7 +109,7 @@
 								<!--begin:Menu item-->
 								<div class="menu-item" side-menu-item="true">
 									<!--begin:Menu link-->
-									<a class="menu-link" href="@Url.Action("MembersList", "GymUser")">
+									<a class="menu-link" asp-controller="GymUser" asp-action="MembersList">
 										<span class="menu-bullet">
 											<span class="bullet bullet-dot"></span>
 										</span>
