--- a/gms.web/Views/Membership/MembershipPayment.cshtml
+++ b/gms.web/Views/Membership/MembershipPayment.cshtml
@@ -70,7 +70,7 @@
                 <!--begin::Card body-->
                 <div class="card-body pt-0">
                     <!--begin::Table-->
-                    <table class="table align-middle table-row-dashed fs-6" id="members-list">
+                    <table class="table align-middle table-row-dashed fs-6" id="membership_payment">
                         <thead>
                             <tr class="text-start text-gray-800 fw-bold fs-7 gs-0">
                                 <th class="text-start min-w-150px">@localizer["membership_name"]</th>
