--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -394,7 +394,7 @@
 						<!--begin:Menu item-->
 						<div class="menu-item" side-menu-item="true">
 							<!--begin:Menu link-->
-							<a class="menu-link" href="@Url.Action("Privacy", "Home")">
+							<a class="menu-link" asp-controller="Membership" asp-action="SubscriptionHistory">
 								<span class="menu-bullet">
 									<span class="bullet bullet-dot"></span>
 								</span>
