--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -386,7 +386,7 @@
 								<span class="menu-bullet">
 									<span class="bullet bullet-dot"></span>
 								</span>
-								<span class="menu-title">@localizer["membership_payment"]</span>
+								<span class="menu-title">@localizer["subscriptions_payment"]</span>
 							</a>
 							<!--end:Menu link-->
 						</div>
@@ -398,7 +398,7 @@
 								<span class="menu-bullet">
 									<span class="bullet bullet-dot"></span>
 								</span>
-								<span class="menu-title">@localizer["subscription_history"]</span>
+								<span class="menu-title">@localizer["subscriptions_history"]</span>
 							</a>
 							<!--end:Menu link-->
 						</div>
