--- a/gms.web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/gms.web/Areas/Identity/Pages/Account/Register.cshtml
@@ -614,6 +614,12 @@
                                             <!--begin::Input wrapper-->
                                             <div class="position-relative mb-3">
                                                 <input class="form-control" type="password" asp-for="Input.Password" placeholder="@localizer["enter"] @localizer["password"] @localizer["here"]" autocomplete="off" />
+                                                <!--begin::Visibility toggle-->
+                                                <span class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2" data-kt-password-meter-control="visibility">
+                                                    <i class="ki-solid ki-eye-slash fs-1"></i>
+                                                    <i class="ki-solid ki-eye d-none fs-1"></i>
+                                                </span>
+                                                <!--end::Visibility toggle-->
                                             </div>
                                             <!--end::Input wrapper-->
                                             <!--begin::Meter-->
