--- a/gms.web/Views/Membership/SubscriptionHistory.cshtml
+++ b/gms.web/Views/Membership/SubscriptionHistory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using gms.common.ViewModels.Membership
 @model MembershipPaymentVM
 @{
-    ViewData["Title"] = localizer["subscription_history"];
+    ViewData["Title"] = localizer["subscriptions_history"];
     bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
 }
 
@@ -18,7 +18,7 @@
                 <div class="page-title d-flex flex-column justify-content-center gap-1 me-3">
                     <!--begin::Title-->
                     <h1 class="page-heading d-flex flex-column justify-content-center text-dark fw-bold fs-3 m-0">
-                        @localizer["subscription_history"]
+                        @localizer["subscriptions_history"]
                     </h1>
                     <!--end::Title-->
                     <!--begin::Breadcrumb-->
@@ -60,7 +60,7 @@
                     <div class="card-toolbar flex-row-fluid justify-content-end gap-5">
                         <!--begin::Add Member-->
                         <a class="btn btn-primary d-flex align-items-center" asp-controller="GymUser" asp-action="CreateNewMember">
-                            <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_member"]
+                            <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_subscription"]
                         </a>
                         <!--end::Add Member-->
                     </div>
@@ -78,9 +78,9 @@
                                 <th class="text-start min-w-50px">@localizer["price"]</th>
                                 <th class="text-start min-w-50px">@localizer["paid_amount"]</th>
                                 <th class="text-start min-w-50px">@localizer["due_amount"]</th>
+                                <th class="text-center min-w-50px">@localizer["payment_status"]</th>
                                 <th class="text-center min-w-50px">@localizer["joining_date"]</th>
                                 <th class="text-center min-w-50px">@localizer["expiring_date"]</th>
-                                <th class="text-center min-w-50px">@localizer["payment_status"]</th>
                             </tr>
                         </thead>
                         <tbody class="fw-semibold text-gray-700">
@@ -92,16 +92,16 @@
                                     <td class="text-start" data-order="@mm.Membership.MembershipAmount">@mm.Membership.MembershipAmount @Model.BranchCurrencySymbol</td>
                                     <td class="text-start" data-order="@mm.PaidAmount">@mm.PaidAmount @Model.BranchCurrencySymbol</td>
                                     <td class="text-start" data-order="@(mm.Membership.MembershipAmount - mm.PaidAmount)">@(mm.Membership.MembershipAmount - mm.PaidAmount) @Model.BranchCurrencySymbol</td>
+                                    <td class="text-center p-5">
+                                        <!--begin::Badges-->
+                                        <div class="badge badge-light-@(mm.PaymentStatusId.ToString().ToLower())">@(localizer[mm.PaymentStatusId.ToString().ToLower()])</div>
+                                        <!--end::Badges-->
+                                    </td>
                                     <td class="text-center" data-order="@mm.JoiningDate.ToString("dd/MM/yyyy")">
                                         <span class="fw-bold">@mm.JoiningDate.ToString("dd/MM/yyyy")</span>
                                     </td>
                                     <td class="text-center" data-order="@mm.ExpiringDate.ToString("dd/MM/yyyy")">
                                         <span class="fw-bold">@mm.ExpiringDate.ToString("dd/MM/yyyy")</span>
-                                    </td>
-                                    <td class="text-center p-5">
-                                        <!--begin::Badges-->
-                                        <div class="badge badge-light-@(mm.PaymentStatusId.ToString().ToLower())">@(localizer[mm.PaymentStatusId.ToString().ToLower()])</div>
-                                        <!--end::Badges-->
                                     </td>
                                 </tr>
                             }
